# binance-futures-btc-agent-bot

./: .gitignore  AGENT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-scope.md  0002-exchange-adapter.md  0003-paper-trading.md  0004-risk-controls.md
src/binance_futures_btc_agent_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
